# ChronicleCLI

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  handlers.py  journal.py  pyproject.toml  utils.py
.github/workflows/: code-quality.yml  pylint.yml  pytest.yml
cli/: handlers.py  journal.py  utils.py
tests/: test_handlers.py  test_utils.py
