[tool.poetry]
name = "chroniclecli"
version = "0.1.0"
description = "ChronicleCLI is a command-line application for keeping a personal journal"
authors = ["Scott <38087336+mergemaven11@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
