[tool.poetry]
name = "chroniclecli"
version = "0.1.0"
description = "ChronicleCLI is a command-line application for keeping a personal journal"
authors = ["Scott <38087336+mergemaven11@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
pytest = "^8.2.0"
freezegun = "^1.5.1"
inquirerpy = "^0.3.4"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
