[tool.poetry]
name = "chroniclecli"
version = "0.1.0"
description = "ChronicleCLI is a command-line application for keeping a personal journal"
authors = ["Scott <38087336+mergemaven11@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
pytest = "^8.2.0"
freezegun = "^1.5.1"
inquirerpy = "^0.3.4"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py312']
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | (?!cli|journal\.py$).*  # Exclude everything except cli directory and journal.py
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
